<resources>
    <string name="app_name">CapaOne Agent</string>
    <string name="device_name_label">Device name: </string>
    <string name="device_osversion_label">OS version: </string>
    <string name="device_model_label">Model: </string>
    <string name="edit_device_name_button_text">Edit</string>
    <string name="approve_new_device_name_button_text">Approve</string>
    <string name="device_location_label_text">Device location: </string>
    <string name="autherization_token_title">Autherization Token</string>
    <string name="organization_id">Organization ID</string>
    <string name="enterprise_id">Enterprise ID</string>
    <string name="device_id">Device ID</string>
</resources>