<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:key="auth_token"
        android:title="@string/autherization_token_title"
        android:restrictionType="string"
        android:defaultValue=""
        />
    <restriction
        android:key="org_id"
        android:title="@string/organization_id"
        android:restrictionType="string"
        android:defaultValue=""
        />
    <restriction
        android:key="enterprise_id"
        android:title="@string/enterprise_id"
        android:restrictionType="string"
        android:defaultValue=""
        />
    <restriction
        android:key="device_id"
        android:title="@string/device_id"
        android:restrictionType="string"
        android:defaultValue=""
        />
</restrictions>